# antfarm

./: .gitignore  Cargo.toml  README.md  antfarm  server.yaml
.cache/matplotlib/: fontlist-v390.json
.githooks/: pre-push
analysis/: .gitignore  README.md  pyproject.toml
analysis/src/antfarm_aggregation/: __init__.py  cli.py
analysis/src/antfarm_metrics/: __init__.py  cli.py  steps.py
analysis/src/antfarm_metrics/metrics/: __init__.py  registry.py
analysis/src/antfarm_visualizations/: __init__.py  bar_chart_horizontal.py  cli.py  cumulative_record.py  registry.py  scatter_plot.py
art/entities/: queen_ant_side.toml
crates/antfarm-core/: Cargo.toml  build.rs
crates/antfarm-core/src/: art.rs  config.rs  constants.rs  game_state.rs  generation.rs  inventory.rs  lib.rs  npc.rs  npc_debug.rs  pheromones.rs  protocol.rs  replay.rs  types.rs  world.rs
crates/antfarm-core/src/ant_roles/: mod.rs  (+2 more)
crates/antfarm-server/: Cargo.toml
crates/antfarm-server/src/: client_session.rs  debug_npc.rs  discovery.rs  experiment.rs  logging.rs  main.rs  persistence.rs  runtime.rs  server_state.rs  startup_commands.rs  sync.rs
crates/antfarm-tools/: Cargo.toml
crates/antfarm-tools/src/: lib.rs
crates/antfarm-tui/: Cargo.toml
crates/antfarm-tui/src/: app.rs  art.rs  client_files.rs  commands.rs  discovery.rs  input.rs  main.rs  modals.rs  network.rs  render.rs
crates/antfarm-tui/src/commands/: local.rs  mod.rs  server.rs
data/: .gitignore
data/clients/: .gitignore  worker-ant.history  worker-ant.toml
docs/: pheromone-architecture.md
experiments/: README.md
experiments/chamber-ants-1/: server.yaml
experiments/experiment-1/: results.html  server.yaml
experiments/experiment-1/baseline/: results.html
experiments/experiment-1/longer-life/: results.html
experiments/experiment-1/outward-bias-v1/: results.html
experiments/experiment-2/: results.html  server.yaml
experiments/experiment-2/baseline/: results.html
experiments/experiment-3/: results.html
experiments/experiment-4/: results.html
experiments/experiment-5/: results.html  server.yaml
experiments/experiment-6/: results.html
experiments/experiment-7/: results.html
scripts/: client.sh  experiment.sh  experiments_sync_common.sh  replay.sh  replay_tui.sh  s3.sh  server.sh  sync-experiments-pull.sh  sync-experiments-push.sh  test.sh  visualizations.sh
(+1420 files in other folders)
