[project]
name = "antfarm-metrics"
version = "0.1.0"
description = "Post-run experiment metrics for antfarm"
requires-python = ">=3.11"
dependencies = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antfarm_metrics", "src/antfarm_aggregation", "src/antfarm_visualizations"]
