[package]
name = "antfarm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
antfarm-core = { path = "../antfarm-core" }
mdns-sd = "0.13"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util"] }
