[package]
name = "antfarm-tui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
antfarm-core = { path = "../antfarm-core" }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
if-addrs = "0.13"
mdns-sd = "0.13"
rand = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time", "io-util"] }

[build-dependencies]
antfarm-tools = { path = "../antfarm-tools" }
anyhow = "1"
